--- a/checkoff_rust/Cargo.toml
+++ b/checkoff_rust/Cargo.toml
@@ -9,3 +9,4 @@ serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.68"
 tokio = { version = "1.0", features = ["full"] }
 sqlx = { version = "0.7.2", features = ["runtime-tokio", "mysql"] }
+tower-http = { version = "0.4.4", features = ["cors"]}
