--- a/checkoff_python/Dockerfile.custom-python
+++ b/checkoff_python/Dockerfile.custom-python
@@ -1,8 +1,13 @@
+# We need to build a custom python install because it needs to be built with
+# `--disable-new-dtags` configure flag so that libraries are built without
+# `DT_RUNPATH`. staticx doesn't support these types of libraries. See
+# https://github.com/actions/setup-python/issues/325#issuecomment-1986709093
+
 # Use an official Ubuntu as a parent image
 FROM ubuntu:latest
 
 # Set environment variables
-ENV PYTHON_VERSION=3.12.3
+ENV PYTHON_VERSION=3.13.0
 
 # Install dependencies
 RUN apt-get update && apt-get install -y \
@@ -39,13 +44,13 @@ ENV LD_LIBRARY_PATH /usr/local/lib
 
 RUN ls /usr/local/lib
 
-RUN echo "alias python=\"python3.12\"" >> /root/.bashrc && \
-    echo "alias pip=\"python3.12 -m pip\"" >> /root/.bashrc && \
-    python3.12 -m pip install --upgrade pip && \
-    python3.12 -m pip install virtualenv
+RUN echo "alias python=\"python3.13\"" >> /root/.bashrc && \
+    echo "alias pip=\"python3.13 -m pip\"" >> /root/.bashrc && \
+    python3.13 -m pip install --upgrade pip && \
+    python3.13 -m pip install virtualenv
 
 # Verify the installation
-RUN python3.12 --version
+RUN python3.13 --version
 
 # Clean up
 WORKDIR /
