--- a/checkoff_rust/Dockerfile.musl-upx
+++ b/checkoff_rust/Dockerfile.musl-upx
@@ -12,23 +12,32 @@ ONBUILD RUN cat certs/ZscalerRootCertificate-2048-SHA256.pem >> /usr/lib/ssl/cer
 FROM build_${BUILD_ENV} AS build
 WORKDIR /app
 
+RUN apt-get update && apt-get install -y --no-install-recommends \
+  xz-utils \
+  && rm -rf /var/lib/apt/lists/*
+
+RUN wget --no-check-certificate https://github.com/upx/upx/releases/download/v4.2.4/upx-4.2.4-amd64_linux.tar.xz
+RUN tar -xf upx-4.2.4-amd64_linux.tar.xz
+
 # Early dependency compilation details: https://medium.com/@dillen.dev/rusty-docker-never-again-fe24e262ab18
 RUN cargo init
 COPY Cargo.toml Cargo.lock ./
 RUN cargo fetch && \
-  cargo build --release && \
+  rustup target add x86_64-unknown-linux-musl && \
+  cargo build --release --target=x86_64-unknown-linux-musl && \
   rm src/*.rs
 
 COPY src src
 
 RUN touch src/main.rs && \
-  cargo build --release
+  cargo build --release --target=x86_64-unknown-linux-musl
 
-from gcr.io/distroless/cc
+RUN ./upx-4.2.4-amd64_linux/upx -9 -o /app/target/x86_64-unknown-linux-musl/release/checkoff_rust_small /app/target/x86_64-unknown-linux-musl/release/checkoff_rust
+
+from scratch
 
 WORKDIR /app
-COPY --from=build /app/target/release/checkoff_rust ./
-#COPY --from=build /app/target/debug/checkoff_rust ./
+COPY --from=build /app/target/x86_64-unknown-linux-musl/release/checkoff_rust_small ./
 ENV RUST_BACKTRACE=full
 
-CMD ["/app/checkoff_rust"]
+CMD ["/app/checkoff_rust_small"]
