--- a/checkoff_rust/Cargo.toml
+++ b/checkoff_rust/Cargo.toml
@@ -9,4 +9,5 @@ serde = { version = "1.0.217", features = ["derive"] }
 serde_json = "1.0.135"
 tokio = { version = "1.43.0", features = ["full"] }
 sqlx = { version = "0.8.3", features = ["runtime-tokio", "mysql"] }
-tower-http = { version = "0.6.2", features = ["cors"]}
+tower-http = { version = "0.6.2", features = ["cors"] }
+mimalloc = { version = "0.1.43", features = ["secure"] }
