Use peewee instead of sqlalchemy - image size went from 22mb to 18mb

--- a/checkoff_python/requirements.txt
+++ b/checkoff_python/requirements.txt
@@ -1,8 +1,6 @@
 flask
-flask-sqlalchemy
-flask-marshmallow
-marshmallow-sqlalchemy
-gunicorn
+peewee
+marshmallow-peewee
 PyMySQL
 gunicorn
 cryptography
