--- a/checkoff_python/Dockerfile.standalone
+++ b/checkoff_python/Dockerfile.standalone
@@ -1,50 +1,27 @@
-FROM alexpogue/python_custom:bookworm-slim-disable-dtags AS base
-
-RUN apt-get update \
-    && apt-get install -y build-essential autoconf wget \
-    && rm -rf /var/lib/apt/lists/* \
-    && apt-get autoremove -y && apt-get clean 
-
-RUN addgroup nonroot \
-  && adduser --ingroup nonroot --uid 1001 --shell /bin/false nonroot
-USER nonroot
-
-WORKDIR /app
-
-RUN wget --no-check-certificate https://github.com/NixOS/patchelf/archive/0.10.tar.gz && \
-    tar xzf 0.10.tar.gz && \
-    cd patchelf-0.10/ && \
-    ./bootstrap.sh && \
-    ./configure && \
-    make
-
-USER root
-RUN cd patchelf-0.10 && make install
-USER nonroot
+FROM alexpogue/checkoff_python_base:latest AS builder
 
 COPY requirements.txt .
-
-RUN pip install --upgrade pip \
-    && pip install pyinstaller staticx \
-    && pip install --no-cache-dir -r requirements.txt
-
-FROM base AS builder
-
-USER nonroot
-
-# copy nonroot user passwd line to copy to final image's /etc/passwd, and
-# create empty directory to copy to final build's /tmp
-RUN cat /etc/passwd | grep nonroot > /app/passwd_nonroot \
-  && mkdir /app/emptytmp
+RUN pip install --upgrade pip && \
+    pip install --no-cache-dir -r requirements.txt
 
 COPY gunicorn.conf.py .
 COPY standalone.py .
 COPY ./checkoff_python ./checkoff_python
 
-RUN python3.13 -OO -m PyInstaller --onefile --add-data "checkoff_python/config.py:checkoff_python" --hidden-import "pysqlite2" --hidden-import "MySQLdb" --hidden-import "gunicorn.glogging" --hidden-import "gunicorn.workers.sync" standalone.py
+RUN python3.13 -OO -m PyInstaller --onefile --add-data "checkoff_python/config.py:checkoff_python" --hidden-import "pysqlite2" --hidden-import "gunicorn.glogging" --hidden-import "gunicorn.workers.sync" standalone.py
 
 WORKDIR /app/dist
 RUN python3.13 -OO -m staticx --strip standalone standalone_app
+WORKDIR /app
+
+# create nonroot user for passwd line to copy to final image's /etc/passwd, and
+# create empty directory to copy to final build's /tmp
+RUN addgroup nonroot \
+  && adduser --ingroup nonroot --uid 1001 --shell /bin/false nonroot \
+  && cat /etc/passwd | grep nonroot > /app/passwd_nonroot \
+  && mkdir /app/emptytmp
+
+USER nonroot
 
 EXPOSE 3000
 
@@ -57,6 +34,7 @@ ENV PYTHONMALLOC=mimalloc
 COPY --from=builder /app/passwd_nonroot /etc/passwd
 COPY --from=builder --chown=nonroot /app/dist/standalone_app standalone_app
 COPY --from=builder --chown=nonroot /app/emptytmp /tmp
+COPY --from=builder --chown=nonroot /app/caching_sha2_password.so /usr/lib/x86_64-linux-gnu/libmariadb3/plugin/caching_sha2_password.so
 
 USER nonroot
 
