Implement json api, add docker versions, including scratch, improve README

--- a/checkoff_c/Dockerfile.glibc
+++ b/checkoff_c/Dockerfile.glibc
@@ -26,10 +26,12 @@ WORKDIR /app
 RUN wget --no-check-certificate https://ftp.gnu.org/gnu/libmicrohttpd/libmicrohttpd-1.0.1.tar.gz \
   && tar zxvf libmicrohttpd-1.0.1.tar.gz \
   && cd libmicrohttpd-1.0.1 \
-  && CC=musl-gcc ./configure \
+  && ./configure \
   && make \
   && make install \
-  && make clean
+  && make clean \
+  && cd /app \
+  && rm -r libmicrohttpd-1.0.1 libmicrohttpd-1.0.1.tar.gz
 
 RUN wget --no-check-certificate https://github.com/babelouest/orcania/archive/refs/tags/v2.3.3.tar.gz \
   && tar zxvf v2.3.3.tar.gz \
@@ -37,9 +39,11 @@ RUN wget --no-check-certificate https://github.com/babelouest/orcania/archive/re
   && mkdir build \
   && cd build \
   && cmake .. \
-  && make CC=musl-gcc \
+  && make \
   && make install \
-  && make clean
+  && make clean \
+  && cd /app \
+  && rm -r orcania-2.3.3 v2.3.3.tar.gz
 
 RUN wget --no-check-certificate https://github.com/babelouest/yder/archive/refs/tags/v1.4.20.tar.gz \
   && tar zxvf v1.4.20.tar.gz \
@@ -47,39 +51,12 @@ RUN wget --no-check-certificate https://github.com/babelouest/yder/archive/refs/
   && mkdir build \
   && cd build \
   && cmake .. \
-  && make CC=musl-gcc \
-  && make install \
-  && make clean
-
-RUN wget --no-check-certificate https://ftp.gnu.org/gnu/nettle/nettle-3.10.tar.gz \
-  && tar zxvf nettle-3.10.tar.gz \
-  && cd nettle-3.10 \
-  && CC=musl-gcc ./configure --host=x86_64-linux-musl --prefix=/usr/local --enable-static --disable-shared \
   && make \
-  && make check \
   && make install \
-  && make clean
+  && make clean \
+  && cd /app \
+  && rm -r yder-1.4.20 v1.4.20.tar.gz
 
-RUN wget --no-check-certificate https://gmplib.org/download/gmp/gmp-6.3.0.tar.xz \
-  && tar xf gmp-6.3.0.tar.xz \
-  && cd gmp-6.3.0 \
-  && CC=musl-gcc ./configure --host=x86_64-linux-musl CFLAGS="-I/usr/local/include -L/usr/local/lib" \
-  && make \
-  && make check \
-  && make install \
-  && make clean
-
-#RUN wget --no-check-certificate https://www.gnupg.org/ftp/gcrypt/gnutls/v3.7/gnutls-3.7.11.tar.xz \
-#  && tar xf gnutls-3.7.11.tar.xz \
-#  && cd gnutls-3.7.11 \
-#  && CC=musl-gcc PKG_CONFIG_PATH="/app/nettle-3.10:$PKG_CONFIG_PATH" ./configure --host=x86_64-linux-musl --prefix=/usr/local --enable-static --disable-shared --with-included-libtasn1 --with-included-unistring --with-libgmp-prefix=/usr/local \
-#  && make \
-#  && make check \
-#  && make install \
-#  && make clean
-
-RUN echo "/usr/local/lib" >> /etc/ld.so.conf \
-  && ldconfig -v
 
 RUN wget --no-check-certificate https://github.com/babelouest/ulfius/archive/refs/tags/v2.7.15.tar.gz \
   && tar zxvf v2.7.15.tar.gz \
@@ -87,27 +64,19 @@ RUN wget --no-check-certificate https://github.com/babelouest/ulfius/archive/ref
   && mkdir build \
   && cd build \
   && cmake -DWITH_CURL=off -DWITH_WEBSOCKET=off -DBUILD_UWSC=off -DCMAKE_MODULE_PATH=/orcania-2.3.3/cmake-modules\;/yder-1.4.20/cmake-modules .. \
-  && make CC=musl-gcc \
+  && make \
   && make install \
-  && make clean
-  #&& cmake -DWITH_CURL=off -DWITH_WEBSOCKET=off -DBUILD_UWSC=off -DBUILD_STATIC=on -DCMAKE_MODULE_PATH=/orcania-2.3.3/cmake-modules\;/yder-1.4.20/cmake-modules .. \
+  && make clean \
+  && cd /app \
+  && rm -r ulfius-2.7.15 v2.7.15.tar.gz
 
-# We install with musl-tools apt-get package instead
-#RUN wget --no-check-certificate https://musl.libc.org/releases/musl-1.2.5.tar.gz \
-#  && tar zxvf musl-1.2.5.tar.gz \
-#  && cd musl-1.2.5 \
-#  && ./configure --prefix="/app/musl" --exec-prefix="/usr/local" \
-#  && make \
-#  && make install \
-#  && make clean
 
 ENV LD_LIBRARY_PATH="$LD_LIBRARY_PATH:/usr/local/lib"
 
 COPY main.c .
 #RUN gcc -static -static-libgcc -static-libstdc++ -o main main.c -L/usr/local/lib -L/usr/lib/gcc/x86_64-linux-gnu/12/ -lulfius
-RUN gcc -Wl,-verbose=99 -o main main.c -L/usr/local/lib -L/usr/lib/gcc/x86_64-linux-gnu/12/ -lulfius
-#RUN gcc -Wl,-verbose=99 -o main main.c -lulfius
+RUN gcc -Wl,-verbose=99 -o main main.c -L/usr/local/lib -L/usr/lib/gcc/x86_64-linux-gnu/12/ -lulfius -ljansson
 #RUN musl-gcc -Wl,-verbose=99 -static -static-libgcc -static-libstdc++ -o main main.c -L/usr/local/lib -L/usr/lib/gcc/x86_64-linux-gnu/12/ -lulfius
 #RUN gcc -Wl,-Bstatic -o main main.c -L/usr/local/lib -lulfius -L/usr/lib/gcc/x86_64-linux-gnu/12/ -lgcc_s
-#CMD ["./main"]
-CMD ["sleep", "1d"]
+CMD ["./main"]
+#CMD ["sleep", "1d"]
